Implemented a single grounding node with parameters. Established dependencies and file hierarchy.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
+# Environment and secrets
 .env
-.venv
-*.pyc[cod]
+
+# Python
 __pycache__/
+*.py[cod]
+*.egg-info/
+
+# Virtual Environment
+.venv/
+
+# IDE and OS
+.vscode/
 .DS_Store
+
+# LangGraph
+.langgraph/
