--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ langgraph>=0.2.56
 tavily-python==0.5.0
 langchain==0.3.7
 langchain-anthropic==0.3.0
+langchain-openai>=0.3.5
 langchain-nvidia-ai-endpoints>=0.0.3
 pypandoc==1.14
 pandoc==2.4
