--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ __pycache__/
 
 # LangGraph
 .langgraph/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
