--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,81 @@
-langgraph>=0.2.56
-tavily-python==0.5.0
-langchain==0.3.7
-langchain-anthropic==0.3.0
-langchain-openai>=0.3.5
-langchain-nvidia-ai-endpoints>=0.0.3
-pypandoc==1.14
-pandoc==2.4
-tldextract==5.1.3
+aioflask==0.4.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+annotated-types==0.7.0
+anthropic==0.45.2
+anyio==4.8.0
+attrs==25.1.0
+awsebcli==3.21.0
+blessed==1.20.0
+blinker==1.9.0
+botocore==1.35.99
+cement==2.10.14
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+cohere==5.13.12
+colorama==0.4.6
+distro==1.9.0
+fastavro==1.10.0
+filelock==3.17.0
+Flask[async]==3.1.0
 fpdf==1.7.2
-flask==3.1.0
-fastapi==0.115.5
-uvicorn==0.32.0
-websockets==14.1
-python-multipart==0.0.17
+frozenlist==1.5.0
+fsspec==2025.2.0
+greenlet==3.1.1
+greenletio==0.11.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.28.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+jiter==0.8.2
+jmespath==1.0.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain-anthropic==0.3.7
+langchain-core==0.3.35
+langchain-nvidia-ai-endpoints==0.3.9
+langchain-openai==0.3.5
+langgraph==0.2.71
+langgraph-checkpoint==2.0.12
+langgraph-sdk==0.1.51
+langsmith==0.3.8
+MarkupSafe==3.0.2
+msgpack==1.1.0
+multidict==6.1.0
+openai==1.62.0
+orjson==3.10.15
+packaging==24.2
+pathspec==0.10.1
+propcache==0.2.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-markdown2==2.5.1
-cohere>=4.48
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+semantic-version==2.10.0
+setuptools==75.8.0
+six==1.17.0
+sniffio==1.3.1
+tavily-python==0.5.1
+tenacity==9.0.0
+termcolor==2.5.0
+tiktoken==0.8.0
+tokenizers==0.21.0
+tqdm==4.67.1
+types-requests==2.32.0.20241016
+typing_extensions==4.12.2
+urllib3==1.26.20
+uvicorn==0.34.0
+wcwidth==0.2.13
+Werkzeug==3.1.3
+yarl==1.18.3
+zstandard==0.23.0
