--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ tokenizers==0.21.0
 tqdm==4.67.1
 typing_extensions==4.12.2
 urllib3>=1.26.5,<2.0.0
-uvicorn==0.34.0
+uvicorn==0.27.1
 Werkzeug==3.1.3
 yarl==1.18.3
+gunicorn==21.2.0
