--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-aioflask==0.4.0
 aiohttp==3.11.12
 aiosignal==1.3.2
 annotated-types==0.7.0
@@ -12,8 +11,6 @@ charset-normalizer==3.4.1
 click==8.1.8
 cohere==5.13.12
 colorama==0.4.6
-Flask[async]==3.1.0
-Flask-CORS==4.0.0
 fpdf==1.7.2
 frozenlist==1.5.0
 greenlet==3.1.1
@@ -21,7 +18,6 @@ greenletio==0.11.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
-httpx-sse==0.4.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
@@ -55,6 +51,9 @@ tqdm==4.67.1
 typing_extensions==4.12.2
 urllib3>=1.26.5,<2.0.0
 uvicorn==0.27.1
-Werkzeug==3.1.3
 yarl==1.18.3
 gunicorn==21.2.0
+fastapi==0.110.0
+websockets==12.0
+python-multipart==0.0.9
+starlette==0.36.3
