Fixed Vercel vite error

--- a/simple-frontend/vercel.json
+++ b/simple-frontend/vercel.json
@@ -1,11 +1,12 @@
 {
+  "version": 2,
   "buildCommand": "npm install && npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
