--- a/simple-frontend/vercel.json
+++ b/simple-frontend/vercel.json
@@ -8,5 +8,14 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
+  ],
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node",
+      "config": {
+        "buildCommand": "npm run build"
+      }
+    }
   ]
 }
