--- a/simple-frontend/vercel.json
+++ b/simple-frontend/vercel.json
@@ -1,4 +1,18 @@
 {
-  "framework": "vite",
-  "outputDirectory": "dist"
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
