--- a/simple-frontend/.env.production
+++ b/simple-frontend/.env.production
@@ -1,2 +1,2 @@
 VITE_API_URL=http://python-env.eba-2czpkkmi.us-east-1.elasticbeanstalk.com
-VITE_WS_URL=wss://python-env.eba-2czpkkmi.us-east-1.elasticbeanstalk.com 
+VITE_WS_URL=ws://python-env.eba-2czpkkmi.us-east-1.elasticbeanstalk.com 
