--- a/requirements.txt
+++ b/requirements.txt
@@ -58,5 +58,5 @@ fastapi==0.110.0
 websockets==12.0
 python-multipart==0.0.9
 starlette==0.36.3
-pymongo==4.6.1
+pymongo>=4.0.1
 google-generativeai==0.8.4
